[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/UI/AnimatedButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/AnimatedButton.gd" type="Script" id=3]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=4]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 96.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 148.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_right = 128.0
margin_bottom = 116.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 108.0
rect_min_size = Vector2( 112, 0 )
custom_constants/separation = 6

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 112.0
margin_bottom = 10.0
text = "PAUSED"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 16.0
margin_right = 112.0
margin_bottom = 40.0
rect_min_size = Vector2( 112, 24 )
rect_pivot_offset = Vector2( 48, 12 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 1 )
text = "CONTINUE"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 46.0
margin_right = 112.0
margin_bottom = 70.0
rect_min_size = Vector2( 112, 24 )
rect_pivot_offset = Vector2( 48, 12 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 1 )
text = "OPTIONS"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 76.0
margin_right = 112.0
margin_bottom = 100.0
rect_min_size = Vector2( 112, 24 )
rect_pivot_offset = Vector2( 48, 12 )
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource( 1 )
text = "QUIT TO MENU"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
